# combobulator

./: README.md  pyproject.toml  requirements.txt  setup.cfg
src/: combobulator.py  metapackage.py
src/analysis/: heuristics.py
src/registry/: maven.py  npm.py  pypi.py
tests/: .pkgs.lst.swp  extract-dep-npm.py  mavenpkgs.lst  package.json-old  pkgs.lst  pom.xml  public_checkers.py
