[metadata]
name = combobulator-moshe-apiiro
version = 0.1
author = Moshe Zioni
author_email = moshe@apiiro.com
description = Dependency Combubulator is a framework for detect and prevent dependency confusion-type of attacks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/apiiro/combobulator
project_urls =
    Bug Tracker = https://github.com/apiiro/combobulator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src